samples/_failures_safe/1761149143_e6cc95_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_97f970f1.c: In function ‘main’:
./samples/SAFE/__tmp_97f970f1.c:182:21: error: expected expression at end of input
  182 |                     sm.current_state =
      |                     ^~
./samples/SAFE/__tmp_97f970f1.c:182:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_97f970f1.c:182:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_97f970f1.c:182:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_97f970f1.c:182:21: error: expected declaration or statement at end of input
